feat: Update contacts component

--- a/client/app/components/contacts/contacts.scss
+++ b/client/app/components/contacts/contacts.scss
@@ -1,3 +1,11 @@
 .contacts {
+  &-action {
+    &--add {
+      position: fixed;
+      top: 0;
+      right: 0;
+      z-index: 2;
+    }
+  }
   color: red;
 }
