--- a/client/app/components/contacts/contacts.html
+++ b/client/app/components/contacts/contacts.html
@@ -1,42 +1,5 @@
-<!-- toolbar -->
-<md-toolbar>
-  <div class="md-toolbar-tools">
-    <h2>Contacts</h2>
-    <md-button ng-click="vm.openSidebar()">
-      <md-icon md-font-set="material-icons">add_circle</md-icon>
-      New Contact
-    </md-button>
-    <md-button ng-click="showFilters = !showFilters">
-      <md-icon md-font-set="material-icons">filter_list</md-icon>
-      Filter
-    </md-button>
-  </div>
-</md-toolbar>
-
-<!-- Filter-bar -->
-<div class="filters" layout="row" layout-align="center center" ng-show="showFilters">
-  <md-input-container layout="row">
-    <label>Enter a Search Term</label>
-    <input ng-model="classifiedsFilter" type="text">
-  </md-input-container>
-
-  <md-input-container layout="row">
-    <label>Category</label>
-    <md-select ng-model="categoriesFilter">
-      <md-option ng-repeat="category in vm.categories" value="{{ category }}">
-        {{ category }}
-      </md-option>
-    </md-select>
-  </md-input-container>
-
-  <md-input-container layout="row">
-    <md-button class="md-warn" ng-click="classifiedsFilter = ''; categoriesFilter = ''">Clear</md-button>
-  </md-input-container>
-</div>
-<!-- End of Filter-bar -->
-
 <contact
-  ng-repeat="contact in $ctrl.contacts"
+  ng-repeat="contact in $ctrl.loadedContacts"
   name="{{ contact.name }}"
   address="{{ contact.address }}"
   email="{{ contact.email }}"
@@ -51,4 +14,10 @@
                     <!--classifieds-filter="classifiedsFilter"-->
                     <!--categories-filter="categoriesFilter"></classifieds-card>-->
 </md-content>
+<md-button
+  ng-click="$ctrl.addContact()"
+  class="contacts-action--add md-fab"
+  aria-label="FAB">
+  <md-icon md-font-set="material-icons md-48">add</md-icon>
+</md-button>
 
