refactor: Change callout for contacts to contacts-lists in the rest of the app

--- a/client/app/components/main/main.html
+++ b/client/app/components/main/main.html
@@ -8,4 +8,4 @@
   </div>
 </md-toolbar>
 <filterbar show-filters="$ctrl.showFilters"></filterbar>
-<contacts contacts="$ctrl.contacts"></contacts>
+<contacts-list contacts="$ctrl.contacts"></contacts-list>
