refactor: rename contact to contacts-list-item

--- a/client/app/components/contacts-list/contacts-list.html
+++ b/client/app/components/contacts-list/contacts-list.html
@@ -1,11 +1,11 @@
-<contact
+<contacts-list-item
   ng-repeat="contact in $ctrl.loadedContacts"
   name="{{ contact.name }}"
   address="{{ contact.address }}"
   email="{{ contact.email }}"
   phone="{{ contact.phone }}"
   picture="{{ contact.picture }}"
-></contact>
+></contacts-list-item>
 <md-content>
   <!-- <pre>{{classifieds | json}}</pre> -->
 
