refactor: rename contact to contact-list-item

--- a/client/app/components/contacts-list/contacts-list-item/contacts-list-item.html
+++ b/client/app/components/contacts-list/contacts-list-item/contacts-list-item.html
@@ -1,13 +1,13 @@
-<md-card class="contact">
+<md-card class="contactsListItem">
   <md-card-content>
       <div
-        class="contact-picture"
+        class="contactsListItem-picture"
         ng-style="{'background-image': $ctrl.pictureUrl }">
       </div>
-      <div class="contact-name">
+      <div class="contactsListItem-name">
         {{ $ctrl.name }}
       </div>
-      <div class="contact-details">
+      <div class="contactsListItem-details">
         <md-icon md-font-set="material-icons md-48">remove_red_eye</md-icon>
       </div>
   </md-card-content>
