feat: Add new contact dialog

--- a/client/app/components/contacts-list/contacts-list.html
+++ b/client/app/components/contacts-list/contacts-list.html
@@ -15,8 +15,8 @@
 </md-sidenav>
 
 <md-button
-  ng-click="$ctrl.addContact()"
-  class="contacts-action--add md-fab"
+  ng-click="$ctrl.addContact($event)"
+  class="contacts-list-action--add md-fab"
   aria-label="FAB">
   <md-icon md-font-set="material-icons md-48">add</md-icon>
 </md-button>
