--- a/client/app/components/contacts-list/contacts-list.scss
+++ b/client/app/components/contacts-list/contacts-list.scss
@@ -1,4 +1,14 @@
-.contacts {
+.contacts-list {
+
+  &-dialog {
+    min-width: 580px;
+  }
+
+  &-form {
+    display: flex;
+    flex-direction: column;
+  }
+
   &-action {
     &--add {
       position: fixed;
@@ -8,4 +18,10 @@
     }
   }
   color: red;
+}
+
+@media only screen and (max-width: 768px) {
+  .contacts-list-dialog {
+    min-width: 90%;
+  }
 }
