--- a/client/app/components/contacts-list/contacts-list-detail/contacts-list-detail.scss
+++ b/client/app/components/contacts-list/contacts-list-detail/contacts-list-detail.scss
@@ -18,6 +18,7 @@ $picture-size: 128px;
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
+    background-color: $emptyColor;
   }
 
   &-name {
@@ -27,6 +28,7 @@ $picture-size: 128px;
 
   &-info {
     flex: 1 1 auto;
+    width: 100%;
 
     ul {
       margin: 0;
@@ -45,6 +47,7 @@ $picture-size: 128px;
 
       &-value {
         font-weight: bold;
+        word-wrap: break-word;
       }
     }
   }
