--- a/client/app/components/contacts-list/contacts-list-item/contacts-list-item.scss
+++ b/client/app/components/contacts-list/contacts-list-item/contacts-list-item.scss
@@ -24,6 +24,7 @@ $picture-size: 48px;
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
+    background-color: $emptyColor;
   }
 
   &-name {
