--- a/client/app/components/contacts-list/contacts-list-detail/contacts-list-detail.html
+++ b/client/app/components/contacts-list/contacts-list-detail/contacts-list-detail.html
@@ -8,19 +8,19 @@
   </div>
   <div class="contactsListDetail-info">
     <ul>
-      <li>
+      <li ng-if="$ctrl.contact.job">
         <span class="info-label">Job Title:</span><br>
         <span class="info-value">{{ $ctrl.contact.job }}</span>
       </li>
-      <li>
+      <li ng-if="$ctrl.contact.email">
         <span class="info-label">Email:</span><br>
         <span class="info-value">{{ $ctrl.contact.email }}</span>
       </li>
-      <li>
+      <li ng-if="$ctrl.contact.phone">
         <span class="info-label">Phone:</span><br>
         <span class="info-value">{{ $ctrl.contact.phone }}</span>
       </li>
-      <li>
+      <li ng-if="$ctrl.contact.address">
         <span class="info-label">Address:</span><br>
         <span class="info-value">{{ $ctrl.contact.address }}</span>
       </li>
