--- a/client/app/common/common.scss
+++ b/client/app/common/common.scss
@@ -8,6 +8,7 @@ $darkBgColor: #263238;
 $lightBgColor: #F5F5F5;
 $lightTextColor: #f5f5f5;
 $darkTextColor: #212121;
+$darkGreyColor: #A2A2A2;
 $emptyColor: #EAEAEA;
 
 $global-timing: 600ms;
@@ -16,5 +17,9 @@ $global-spacing: 24px;
 body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
   height: 100%;
+}
+
+*:focus {
+  outline: 0;
 }
 
