--- a/client/app/components/contacts-list/contacts-list-item/contacts-list-item.html
+++ b/client/app/components/contacts-list/contacts-list-item/contacts-list-item.html
@@ -15,7 +15,7 @@
         ng-mouseenter="$ctrl.openFabDial($event)"
         ng-mouseleave="$ctrl.closeFabDial($event)">
         <md-fab-trigger>
-          <md-button aria-label="menu" class="md-fab md-warn" ng-click="$ctrl.openFabDial($event)">
+          <md-button aria-label="menu" class="md-fab" ng-click="$ctrl.openFabDial($event)">
             <md-icon md-font-set="material-icons md-48" aria-label="menu">menu</md-icon>
           </md-button>
         </md-fab-trigger>
