--- a/client/app/components/contacts-list/contacts-list-item/contacts-list-item.scss
+++ b/client/app/components/contacts-list/contacts-list-item/contacts-list-item.scss
@@ -1,6 +1,6 @@
 @import '../../../common/common';
 
-$picture-size: 48px;
+$picture-size: 56px;
 
 .contactsListItem {
 
@@ -18,7 +18,7 @@ $picture-size: 48px;
   }
 
   &-picture {
-    width: $picture-size;
+    min-width: $picture-size;
     height: $picture-size;
     border-radius: 50%;
     background-position: center center;
