--- a/client/app/components/contacts-list/contacts-list.scss
+++ b/client/app/components/contacts-list/contacts-list.scss
@@ -1,6 +1,16 @@
 @import '../../common/common';
 
+contacts-list {
+    height: 100%;
+}
+
 .contacts-list {
+
+  display: flex;
+  flex: 1 1 auto;
+  flex-direction: column;
+  margin-top: $global-spacing / 4;
+  height: calc(100% - 78px);
 
   &-dialog {
     min-width: 580px;
@@ -17,12 +27,22 @@
   &-action {
     &--add {
       position: fixed;
-      top: 0;
-      right: 0;
+      bottom: $global-spacing;
+      right: $global-spacing;
       z-index: 2;
     }
   }
-  color: red;
+
+  &.empty {
+    justify-content: center;
+  }
+}
+
+.no-contacts {
+  align-self: center;
+  text-align: center;
+  color: $darkGreyColor;
+  font-size: 1.2em;
 }
 
 @media only screen and (max-width: 768px) {
