--- a/client/app/common/common.scss
+++ b/client/app/common/common.scss
@@ -3,9 +3,10 @@
 
 $primaryColor: #0277bd;
 $accentColor: #1de9b6;
-$bgColor: #efefef;
+$bgColor: #eeeeee;
 $darkBgColor: #263238;
 $lightBgColor: #F5F5F5;
+$whiteBgColor: #FFFFFF;
 $lightTextColor: #f5f5f5;
 $darkTextColor: #212121;
 $darkGreyColor: #A2A2A2;
@@ -13,13 +14,3 @@ $emptyColor: #EAEAEA;
 
 $global-timing: 600ms;
 $global-spacing: 24px;
-
-body {
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-  height: 100%;
-}
-
-*:focus {
-  outline: 0;
-}
-
