--- a/client/app/components/contacts-list/contacts-list-item/contacts-list-item.scss
+++ b/client/app/components/contacts-list/contacts-list-item/contacts-list-item.scss
@@ -2,6 +2,10 @@
 
 $picture-size: 56px;
 
+contacts-list-item:last-of-type {
+  margin-bottom: 112px;
+}
+
 .contactsListItem {
 
   md-card-content {
