fix: only apply transition on background color

--- a/client/app/components/contacts-list/contacts-list-item/contacts-list-item.scss
+++ b/client/app/components/contacts-list/contacts-list-item/contacts-list-item.scss
@@ -65,7 +65,7 @@ contacts-list-item:last-of-type {
     &-actions {
       position: absolute;
       margin-left: 0;
-      transition: $global-timing;
+      transition: background-color $global-timing;
       width: 100%;
       height: 100%;
 
